# Nexus

./: Cargo.toml  README.md
nxs_interface/: Cargo.toml
nxs_interface/src/: lib.rs  root.rs  text.rs
nxs_interface/src/util/: dyn_cast.rs
nxs_interface/src/util/dyn_cast/: tests.rs
nxs_interface_macros/: Cargo.toml
nxs_interface_macros/src/: dyn_cast.rs  leaf_module.rs  lib.rs  util.rs
nxs_interface_macros/src/util/: static_impl_generics.rs
nxs_std_cmds/: Cargo.toml
nxs_std_cmds/src/: lib.rs
nxs_std_root/: Cargo.toml  lib.rs
nxs_std_text/: Cargo.toml
nxs_std_text/src/: lib.rs
src/: lib.rs  main.rs
src/util/: dyn_ref.rs  mod.rs
src/util/crosscast/: macros.rs  mod.rs
src/util/dyn_cast/: macros.rs  mod.rs  tests.rs
