[package]
name = "nxs_std_root"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nxs_interface]
path = "../nxs_interface"
features = ["util", "root", "derive"]

[dependencies.futures]
version = "0.3"
features = ["std"]
default-features = false
